tests/ui/generic-const-items/user_type_annotations_pattern.stderr
error: lifetime may not live long enough
  --> $DIR/user_type_annotations_pattern.rs:8:9
   |
LL | fn bar<'a>() {
   |        -- lifetime `'a` defined here
LL |     match 10_usize {
LL |         FOO::<'a> => todo!(),
   |         ^^^^^^^^^ requires that `'a` must outlive `'static`

error: aborting due to 1 previous error

